--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9681,7 +9681,7 @@ form.register .input-submit~span.lost_password a {
 }
 
 .woocommerce-MyAccount-navigation ul li li a:hover {
-    color: #398dcc;
+    color: #000768;
 }
 
 .woocommerce-MyAccount-navigation ul li.is-active {
